--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 		<button class="clear">Clear</button>
 	</div>
 
+	<div id="grid"></div>
+
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="application.js"></script>
 
