--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<button class="clear">Clear</button>
 	</div>
 
-	<div id="grid"></div>
+	<section class="grid"></section>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="application.js"></script>
